<?xml version="1.0" encoding="utf-8"?>
<resources>

     <!-- common -->
    <string name="copyright">华南师范大学软件学院版权所有</string>
    <string name="app_name">YES游泳计时器</string>
    <string name="synchronizing">正在同步…………</string>
    <string name="onSubmitting">正在提交…………</string>
    <string name="onQuerying">正在查询…………</string>
    <string name="submit">提交</string>
    <string name="submit_succeed">提交成功</string>
    <string name="submit_failed">提交失败</string>
    <string name="modify_succeed">修改成功</string>
    <string name="modify_failed">修改失败</string>
    <string name="synchronized_success">同步成功</string>
    <string name="synchronized_failed">同步失败</string>
    <string name="network_error">当前网络不给力,请检查网络连接情况</string>
    <string name="quit_app">再按一次退出程序</string>
    <string name="action_settings">Settings</string>
    <string name="dont_need_to_save_again">成绩已经保存，无需再次保存!</string>
    <string name="date_picker_title">日期选择：</string>
    <string name="stroke">泳姿</string>
    <string name="on">男</string>
    <string name="off">女</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 运动员activity -->
    <string name="manage_athlete">运动员管理</string>
    <string name="athlete_id">编号</string>
    <string name="name">姓名</string>
    <string name="operation">操作</string>
    
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknow_error">未知错误</string>
    <string name="enable_modify">编辑信息</string>
    <string name="check_athlete_msg">查看运动员信息</string>
    <string name="add_athlete_title_string">添加运动员</string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_athlete_tip">"确定要删除运动员 %s 的信息吗？"</string>
    <string name="name_cannot_be_empty_string">运动员名字不能为空</string>
    <string name="name_cannot_be_repete_string">存在运动员名字重复，请更改</string>

    <!-- welcomeactivity -->
    <string name="app_version">游泳系统 v2.0 \n By华南师范大学 2014-2016</string>
    
    <!--  登录activity -->
    <string name="login_hint">用户登录</string>
    <string name="login_now">立即登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="set_ip_and_port">设置服务器地址和端口</string>
    <string name="sending_request">正在发送请求…………</string>
    <string name="input_user_name">请输入用户名</string>
    <string name="input_pwd">请输入密码</string>
    <string name="nameorpwd_cannot_be_empty">用户名或密码不能为空</string>
    <string name="logining">正在登录……</string>
    <string name="login_success">登录成功</string>
    <string name="user_donot_exists">用户名不存在！</string>
    <string name="pwd_wrong">密码错误!</string>
    <string name="server_error">服务器错误!</string>
    <string name="server_ip_port_setting">服务器IP与端口设置</string>
    <string name="finish">完成</string>
    <string name="setting_success">设置成功</string>
    <string name="cannot_connect_to_server">无法连接服务器</string>
    <string name="ip_and_port_notnull">IP与端口地址均不可为空</string>
    <string name="default_acount_login">默认账号登陆</string>
    <string name="cannot_login">无法登陆</string>
    <string name="login_again">重新登陆</string>
    <string name="continute_use_tip">如果要继续使用，未注册请选择系统默认帐号登录,或者重新尝试登陆"
								+ "注意：默认账号只能试用，数据无法上传至服务器！</string>
    <string name="login_success_and_jump">登陆成功，立即跳转</string>

    <!-- EachtimeScore activity -->
    <string name="NO">第</string>
    <string name="time_record">趟计时</string>
    <string name="system_hint">系统提示</string>
    <string name="cancel_save_record">是否放弃保存本轮成绩</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="score_is_zero">该趟成绩当前距离为0!</string>
    <string name="score_num_not_match_athlete_num">成绩数与运动员人数不对应!若误删数据，请恢复数据</string>
    <string name="match_done">匹配完成!</string>
    
    <!-- registactivity -->
    <string name="quick_regist">快速注册</string>
    <string name="user_name">用户名</string>
    <string name="user_name_hint">请填写用户名</string>
    <string name="login_pwd">登录密码</string>
    <string name="login_pwd_hint">请输入登录密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="confirm_pwd_hint">请输入确认密码</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_code_hint">请输入邀请码</string>
    <string name="email">邮箱</string>
    <string name="email_hint">填写邮箱地址</string>
    <string name="phone">手机号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="regist">注册</string>
    
    <string name="username_not_null">用户名不能为空</string>
    <string name="pwd_not_null">用户密码不能为空</string>
    <string name="con_pwd_not_equal_pwd">确认密码与原密码不相同</string>
    <string name="email_not_right">电子邮件格式不对</string>
    <string name="phone_num_not_right">输入的电话号码格式不正确</string>
    <string name="register_loading">正在注册……</string>
    <string name="register_succeed">注册成功</string>
    <string name="user_exists">用户已经存在</string>
    <string name="unkonwn_error">未知错误</string>
    <string name="server_or_network_error">服务器或网络错误</string>
    
    <!-- 使用说明 -->
    <string name="user_tip">使用说明</string>
    
    <!-- mainactivity -->
    <string name="athlete">运动员</string>
    <string name="timer">计时器</string>
    <string name="choosed_athlete">已经选择的运动员</string>
    <string name="otherfunctions">小功能</string>
    <string name="queryscore">成绩查询</string>
    <string name="setting">设置</string>
    
    <!-- matchscoreactivity -->
    <string name="match_score_athlete">运动员成绩匹配</string>
    <string name="dash_length">冲刺距离</string>
    <string name="finish_modify_and_count">调整完毕，进入统计</string>
    
    <string name="leave_at_least_one_athlete">至少保留一个运动员</string>
    <string name="leave_at_least_one_score">至少保留一个成绩</string>
    <string name="adjust_finish_goto_statistics">调整完毕，进入统计页面</string>
    <string name="fill_in_scores_distance">请填写记录当前成绩的距离！</string>
    <string name="score_num_not_equalwith_athlete_num">成绩数目与运动员数目不相等,请删除部分数据!若误删数据，可以按行恢复</string>
    <string name="copy_add">复制添加该项</string>
    <string name="goto_next_timer_or_adjust_score">"是否开始下一趟计时\n选择【否】则返回调整成绩或者运动员数目,或者结束本轮计时\n选择【是】则直接开始下一趟计时</string>
    <string name="goto_adjust_score">当前计时趟数没有完成，是否真的要跳转到成绩统计界面，上传成绩？</string>
    <string name="match_succeed">成绩匹配完成</string>
    <string name="match_score">运动员成绩匹配</string>
    <string name="this_time">本次成绩在</string>
    <string name="this_time_score">米处记录</string>
    <string name="five_meter">5米</string>
    <string name="ten_meter">10米</string>
    <string name="fif_meter">15米</string>
    <string name="choose_athlete">选择运动员</string>
    <string name="back">返回</string>
    <string name="quit_and_dont_save_score">是否放弃保存本轮成绩</string>
    <string name="score_saved_goto_to_home">成绩已经保存，是否返回主界面？</string>
    
    <!-- modifyPwdActivity -->
    <string name="old_pwd_not_null">原密码不能为空</string>
    <string name="new_pwd_not_null">新密码不能为空</string>
    <string name="confirm_pwd_not_null">确认密码不能为空</string>
    <string name="old_pwd_wrong">原密码错误</string>
    <string name="new_pwd_the_same_with_the_old">输入的新密码不能和原密码相同，请重新输入新密码</string>
    <string name="the_default_account_cannot_be_modified">当前为默认账户，不能够对密码进行修改</string>
    
    <!-- otherfunctionactivity -->
    <string name="three_time">三次计频</string>
    <string name="dash_timer">冲刺计时</string>
    <string name="other_function">小功能</string>
    
    <!-- timerfragment -->
    <string name="timer_setting">计时准备</string>
    <string name="pool_length">泳池长度</string>
    <string name="choose_stroke">泳姿选择</string>
    <string name="stop_watch">是否停表</string>
    <string name="interval">间歇</string>
    <string name="input_athlete">输入运动员</string>
    <string name="time_interval">计时间隔</string>
    <string name="swim_total_length">游泳总距离</string>
    <string name="input_extra">请输入备注</string>
    <string name="start_timer">开始计时</string>
    
    <string name="set_total_length">请设置本轮计时的总距离</string>
    <string name="set_timer_interval_length">请设置本轮计时的时间间隔距离</string>
    <string name="interval_length_cannot_loger_than_total_length">计时间隔距离不能大于总距离</string>
    <string name="add_athlete_before_timer">请添加运动员后再开始计时</string>
    
    <!-- timeractivity -->
    <string name="No_timer">第 %s 次计时</string>
    <string name="No_1">1</string>
    <string name="No_n">%d</string>
    <string name="score_record_done">全部成绩记录完成</string>
    <string name="reset_not_for_notreset">不间歇计时无法重设时间</string>
    <string name="dont_save_more_score">不要保存太多不必要的成绩</string>
    <string name="time_reset">00:00:00</string>
    <string name="quit_timing">本次游泳计时还未完成，如果强行退出，当前计时就作废，是否要退出？</string>
    
    <!-- homeactivity -->
    <string name="fragment_index">首页</string>
    <string name="fragment_timer">计时</string>
    <string name="fragment_more">我的</string>
    
    <!-- settingactivity -->
    <string name="system_settint">系统设置</string>
    
    <string name="confirm_to_logout">确定注销当前用户？</string>
    
    <!-- modifypwdactivity -->
    <string name="modify_pwd">修改密码</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="modify">修改</string>
    <string name="send_succ_check_email">发送成功，请查看邮箱</string>
    <string name="user_not_exist">用户不存在</string>
    
    <!-- 找回密码 -->
    <string name="find_pwd">找回密码</string>
    <string name="send_email">发送邮件</string>
    
    <!-- match_dash_score_activity -->
    <string name="reload_data">重新载入数据</string>
    <string name="save">保存</string>
    <string name="upload">上传</string>
    <string name="athlete_score_match">运动员成绩匹配</string>
    
    <!-- queryscoreactivity -->
    <string name="first_round">第一趟</string>
    <string name="all">所有</string>
    <string name="score_empty">当前没有相关成绩，请重新查询！</string>
    <string name="stroke_title">泳姿:</string>
    <string name="total_distance">总距离:</string>
    <string name="interval_title">间歇:</string>
    
    <!-- showscoreactivity -->
    <string name="show_score">成绩展示</string>
    <string name="show_score_date_list">成绩上传日期</string>
    <string name="empty_score">没有成绩</string>

    <!-- AboutUsActivity -->
    <string name="version">版本:</string>

    <!-- queryfragment -->
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="all_athlete">所有运动员</string>
    <string name="network_query">联网查询</string>
    <string name="local_query">本地查询</string>
    <string name="swim_length">游泳总距离</string>
    <string name="start_time_not_null">开始时间不能为空</string>
    <string name="end_time_not_null">结束时间不能为空</string>
    
    <!-- frequencefragment -->
    <string name="three_time_result">三次计频结果</string>
    <string name="reset">重置</string>
    <string name="date_is_null">日期不能为空</string>
    <string name="click_clock_and_record_score">点击表盘开始计时，再次点击记录成绩</string>
    <string name="default_time_per_min">0.00次/分钟</string>

    <!-- modifyEachTimeScoreActivity -->
    <string name="modify_score">调整多趟成绩</string>
    
    
    <!-- springfragment -->
    <string name="time">"%1$01d:%2$02d'%3$02d''%4$02d"</string>logout

    <!-- minefragment -->
    <string name="mine">我的</string>
    <string name="question_help">使用帮助</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>

    <!-- indexfragment-->

</resources>